# server

./: README.md  pyproject.toml
src/: __main__.py
src/medievalization_server/: __init__.py  __main__.py
