[tool.poetry]
name = "medievalization-server"
description = "The Python game server for Medievalization"
version = "0.1.1"

authors = ["Virinas-code <alexcode228@gmail.com>"]
maintainers = []

license = "GPL-3.0-or-later"

homepage = "https://example.com/"
repository = "https://github.com/medievalization/server"
documentation = "https://example.com/"
readme = "README.md"

keywords = ["game", "python", "server"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: French",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Real Time Strategy",
]

packages = [{ include = "medievalization_server", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"

[tool.poetry.scripts]
medievalization_server = "medievalization_server:__main__.main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
